--- a/css/styles_for_layout.css
+++ b/css/styles_for_layout.css
@@ -521,6 +521,9 @@ div.section-about__footer-content h5{
     max-width: 1508px;
     margin: 0 auto;
 }
+.hidden-radio-2{
+    display: none;
+}
 .section-reviews__container{
     margin: 0 auto;
     max-width: 1170px;
@@ -606,8 +609,7 @@ div.section-about__footer-content h5{
 .section-reviews__employees-container{
     max-width: 1170px;
     display: flex;
-    justify-content: space-between;
-    gap: 5vw;
+    justify-content: space-around;
     margin-top: 66px;
 }
 .section-reviews__employees{
@@ -1140,6 +1142,7 @@ div.section-about__footer-content h5{
         margin-top: 1.5em;
     }
     .section-reviews__qoutes{
+        display: none;
         max-width: 100%;
         min-height: 180px;
         margin-right: 0;
@@ -1149,6 +1152,8 @@ div.section-about__footer-content h5{
     }
     .section-reviews__employees{
         width: 317px;
+        display: none;
+        left: 20px;
     }
     .section-reviews__employees > img{
         width: 63px;
@@ -1165,5 +1170,47 @@ div.section-about__footer-content h5{
         font-size: 13px;
         line-height: 15px;
     }
-    
+    .section-reviews__dots{
+        position: relative;
+        left: 76px;
+        top: 30px;
+    }
+    .section-reviews__first-dot{
+        position: absolute;
+        width: 10px;
+        height: 10px;
+        border-radius: 5px;
+        border: 1px solid #86878B;
+    }
+    .section-reviews__second-dot{
+        position: absolute;
+        left: 50px;
+        width: 10px;
+        height: 10px;
+        border-radius: 5px;
+        border: 1px solid #86878B;
+    }
+    .section-reviews__third-dot{
+        position: absolute;
+        left: 100px;
+        width: 10px;
+        height: 10px;
+        border-radius: 5px;
+        border: 1px solid #86878B;
+    }
+    #hidden-radio-2-first-item:checked ~ .section-reviews__dots .section-reviews__first-dot,
+    #hidden-radio-2-second-item:checked ~ .section-reviews__dots .section-reviews__second-dot,
+    #hidden-radio-2-third-item:checked ~ .section-reviews__dots .section-reviews__third-dot{
+        background-color: #86878B;
+    }
+    #hidden-radio-2-first-item:checked ~ .section-reviews__employees-container #section-reviews__first-employee,
+    #hidden-radio-2-second-item:checked ~ .section-reviews__employees-container #section-reviews__second-employee,
+    #hidden-radio-2-third-item:checked ~ .section-reviews__employees-container #section-reviews__third-employee{
+        display: flex;
+    }
+    #hidden-radio-2-first-item:checked ~ .section-reviews__text-bubbles #section-reviews__first-qoute,
+    #hidden-radio-2-second-item:checked ~ .section-reviews__text-bubbles #section-reviews__second-qoute,
+    #hidden-radio-2-third-item:checked ~ .section-reviews__text-bubbles #section-reviews__third-qoute{
+        display: flex;
+    }
 }
