--- a/css/styles_for_layout.css
+++ b/css/styles_for_layout.css
@@ -268,6 +268,10 @@
     line-height: 19px;
     color: #BDBDBD;
 }
+.banner__input:focus{
+    outline: none;
+    color: #000000;
+}
 .banner__button-2{
     width: 100%;
     height: 60px;
@@ -1113,6 +1117,9 @@ div.about__footer-content h5{
     font-weight: 400;
     font-size: 14px;
     line-height: 19px;
+}
+.contact__input:focus{
+    outline: none;
 }
 .contact__input-container textarea{
     position: absolute;
