--- a/css/styles_for_layout.css
+++ b/css/styles_for_layout.css
@@ -57,7 +57,7 @@
     cursor: pointer;
 }
 .header__nav:hover{
-    border-bottom: 4px solid #FFFFFF;
+    color: #AB4949;
 }
 .header__hamburger{
     width: 40px;
@@ -105,7 +105,7 @@
     display: none;
 }
 .header__hamburger-nav{
-    width: 280px;
+    width: 100%;
     height: 67px;
     font-family: "Open Sans";
     font-style: normal;
@@ -346,8 +346,6 @@
     justify-content: space-between;
     width: 45vw;
     cursor: pointer;
-}
-.social__icon-cell{
 }
 .social__icon-container:hover{
     opacity: 65%;
@@ -1117,6 +1115,7 @@ div.about__footer-content h5{
     font-weight: 400;
     font-size: 14px;
     line-height: 19px;
+    resize: none;
 }
 .contact__input:focus{
     outline: none;
@@ -1286,6 +1285,7 @@ div.about__footer-content h5{
     }
     .banner__content-right{
         max-width: 398px;
+        margin-right: 2%;
     }
     .banner__title-right{
         max-width: 367px;
@@ -1297,10 +1297,6 @@ div.about__footer-content h5{
         width: 75%;
         height: 40px;
         margin-bottom: 35px;
-    }
-    .banner__button-2{
-    }
-    .social{
     }
     .social__container{
         max-width: 1024px;
@@ -1641,9 +1637,9 @@ div.about__footer-content h5{
     }
     
 }
-@media (max-width : 520px) {
+@media (max-width : 600px) {
     .header{
-        max-width: 520px;
+        max-width: 600px;
     }
     .header__container{
         max-width: 480px;
@@ -1657,7 +1653,7 @@ div.about__footer-content h5{
     }
     .header__hamburger-menu{
         position: absolute;
-        max-width: 520px;
+        max-width: 600px;
         top: 56px;
         left: 0;
         display: none;
@@ -1727,10 +1723,6 @@ div.about__footer-content h5{
     }
     .banner__input{
         width: 83%;
-    }
-    .banner__button-2{
-    }
-    .social{
     }
     .social__text-container{
         margin-right: 0;
@@ -1834,13 +1826,11 @@ div.about__footer-content h5{
     }
     .tabs__button{
         width: 242px;
-        height: 74px;
+        height: 50px;
         left: 25px;
         bottom: 30px;
     }
     .tabs__content > img{
-        width: 398px;
-        height: 385px;
         display: none;
     }
     .about__container{
